Updated Player Model Implemented Souls.java to account for souls that a player has.